# cmf-web-scraping

./: .gitignore  .tmp_allowed_range.txt  CLAUDE.md  README.md  README_GUI.md  README_MODULAR.md  analisis-excel-formulas.py  analisis-excel.py  bolsa_santiago_scraper.py  cli_bank_scraper.py  cli_interactive.py  cmf_annual_reports_scraper.py  cmf_annual_reports_scraper_v1.py  cmf_gui.py  cmf_gui_modular.py  cmf_scraper_log_20260622_105308.txt  cmf_scraper_log_20260622_155428.txt  cmf_scraper_log_20260622_155754.txt  cmf_xbrl_downloader.py  debug_period.py  demo_interactive.py  migrate_to_modular.py  page-estados-ifrs.txt  pyproject.toml  requirements.txt  run_analisis_excel.py  run_gui.py  run_pipeline_cli.py  run_pipeline_gui.py  rut_chilean_companies.py  setup.sh  setup_selenium.py  test_dual_reports.py  test_extractor.py  test_full_report_names.py  test_report_urls.py  test_rut_folders.py  test_year_flexibility.py  validate_system.py
analisis_excel/: README.md  __init__.py  bulk_processor.py  data_extractor.py  excel_formatter.py  formula_builder.py  ratio_calculator.py
cmf_extract/: .gitattributes  .gitignore  .tmp_allowed_range.txt  AGENTS.md  CLAUDE.md  README_compare.md  XBRL_TO_EXCEL_ARCHITECTURE.md  add_start_sheet_v4.py  arelle_pool.py  arelle_worker.py  batch_xbrl_to_excel.py  bench_arelle.py  build_label_rename_map.py  check_excel.py  check_excel_duplicates.py  cleanup_english_files.py  cmf_cli.py  cmf_taxonomia.py  cmf_total_cli_v2.py  compare_xbrl_products.py  conceps.py  cuentas_quinenco.json  currency_detect.py  dcf_patch.py  excel_style.py  excel_to_csv_mapping.py  facts_enhancer.py  fx.py  generate_primary_roles_csv.py  label_rename.py  manual_overrides.json  market_data.py  new_eeff_estructura.json.bak.20260624_134551  new_eeff_estructura_old.json  (+21 more)
(+1111 files in other folders)
